fix the width of card component to set up a horizontal scroll for our data

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -28,100 +28,109 @@ body {
   overflow-x: hidden;
 }
 
-
-.navbar {
-  height: 6rem;
-  border-bottom: 4px solid rgba($navbar-bottom-border, 0.1);
-
-  .logo {
-    width: 11rem;
-    padding: 2rem;
-    margin-left: 0.5rem;
-  }
+.app {
+  width: 34rem;
+  overflow-x: hidden;
 }
 
-.hero {
-  width: 100vh;
 
-  .hero-photo {
-    margin: 3rem 4.8125rem 2rem 4.8125rem;
-    width: 24.74rem;
+.app-header {
+
+  .navbar {
+    height: 6rem;
+    border-bottom: 4px solid rgba($navbar-bottom-border, 0.1);
+
+    .logo {
+      width: 11rem;
+      padding: 2rem;
+      margin-left: 0.5rem;
+    }
   }
 
-  .hero-header {
-    font-size: 2.25rem;
-    font-weight: 600;
-    margin-left: 2.25rem;
-    margin-bottom: 0.5rem;
-  }
+  .hero {
+    width: 100vh;
 
-  .hero-text {
-    color: $main-text-color-black;
-    font-weight: 300;
-    margin-left: 2.25rem;
-    width: 33ch;
-    line-height: 110%;
-  }
-}
-
-.card-container {
-  margin: 3rem -1.25rem 1rem 2.25rem;
-
-  .card {
-    position: relative;
-    display: flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-
-    .card-status {
-      font-size: 0.64rem;
-      padding: 0.25rem;
-      background-color: $main-background-color;
-      position: absolute;
-      left: 0.5rem;
-      top: 0.5rem;
-      border-radius: 2px;
+    .hero-photo {
+      margin: 3rem 4.8125rem 2rem 4.8125rem;
+      width: 24.74rem;
     }
 
-    .card-photo {
-      width: 10.9375rem;
+    .hero-header {
+      font-size: 2.25rem;
+      font-weight: 600;
+      margin-left: 2.25rem;
+      margin-bottom: 0.5rem;
     }
 
-    .card-rating {
-      font-size: 0.75rem;
-      display: flex;
-      align-items: center;
-      gap: 0.25rem;
-      margin-bottom: 0.3rem;
-
-      .star {
-        width: 0.875rem;
-      }
-
-      span {
-        color: $main-span-color;
-
-        .ellipse {
-          position: relative;
-          bottom: 0.2rem;
-        }
-      }
-    }
-
-    .card-description {
-      font-size: 0.75rem;
-      width: 24ch;
-      line-height: 180%;
-
-      span {
-        font-weight: 600;
-      }
+    .hero-text {
+      color: $main-text-color-black;
+      font-weight: 300;
+      margin-left: 2.25rem;
+      width: 33ch;
+      line-height: 110%;
     }
   }
 }
 
 .card-list {
-  width: 100vw;
   display: flex;
   overflow-x: scroll;
+
+  .card-container {
+    margin: 3rem -1.25rem 1rem 2.25rem;
+
+    .card {
+      display: flex;
+      flex: 0 0 auto;
+      flex-direction: column;
+      position: relative;
+
+      .card-status {
+        font-size: 0.64rem;
+        padding: 0.25rem;
+        background-color: $main-background-color;
+        position: absolute;
+        left: 0.5rem;
+        top: 0.5rem;
+        border-radius: 2px;
+      }
+
+      .card-photo {
+        width: 10.9375rem;
+      }
+
+      .card-rating {
+        font-size: 0.75rem;
+        display: flex;
+        align-items: center;
+        gap: 0.25rem;
+        margin-bottom: 0.3rem;
+
+        .star {
+          width: 0.875rem;
+        }
+
+        span {
+          color: $main-span-color;
+
+          .ellipse {
+            position: relative;
+            bottom: 0.2rem;
+          }
+        }
+      }
+
+      .card-description {
+        font-size: 0.75rem;
+        width: 24ch;
+        line-height: 180%;
+
+        span {
+          font-weight: 600;
+        }
+      }
+    }
+  }
+
+
 }
